fix stuttering scrolling on Safari
This was one of the most bizarre bugs I've ever seen. I tried several
optimizations in the requestAnimationFrame loop but the thing that
fixed it was changing the background-image for the measure lines from
an SVG to a gif.

--- a/css/styles.css
+++ b/css/styles.css
@@ -240,19 +240,19 @@ a {
 .note-line {
   position: relative;
   width: var(--hole-width);
-  background-image: url('/images/measure-lines.svg');
+  background-image: url('/images/measure-lines.gif');
   background-position: 0 var(--hole-width);
   cursor: pointer;
 }
 
 .note-line:first-child {
-  background-image: url('/images/measure-lines.svg');
+  background-image: url('/images/measure-lines.gif');
   background-position: calc(var(--hole-width) / 2) var(--hole-width);
   background-repeat: repeat-y;
 }
 
 .note-line:last-child {
-  background-image: url('/images/measure-lines.svg');
+  background-image: url('/images/measure-lines.gif');
   background-position: right calc(var(--hole-width) / 2) top var(--hole-width);
   background-repeat: repeat-y;
 }
